--- a/REDCap identifier/record_change_checker.Rmd
+++ b/REDCap identifier/record_change_checker.Rmd
@@ -27,7 +27,7 @@ my.event <- c('epipenta1_v0_recru_arm_1')
 
 
 
-my_facilities <- list("HF16.04", "HF12.01", "HF06")
+my_facilities <- list("HF02.01", "HF02.02", "HF04", "HF06", "HF10", "HF16.04" )
 
 long_record_length <- 4
 max_len_new_record <- 8
@@ -77,7 +77,7 @@ knitr::opts_chunk$set(echo = TRUE)
   #AFTER THE CHANGE
 
 
-my_facilities <- list("HF16.04", "HF12.01", "HF06")
+my_facilities <- list("HF02.01", "HF02.02", "HF04", "HF06", "HF10", "HF16.04" )
 
 
 for (hf in names(kRedcapTokens)) {
