--- a/REDCap identifier/record_change_checker.Rmd
+++ b/REDCap identifier/record_change_checker.Rmd
@@ -27,7 +27,17 @@ my.event <- c('epipenta1_v0_recru_arm_1')
 
 
 
-my_facilities <- list("HF02.01", "HF02.02", "HF04", "HF06", "HF10", "HF16.04" )
+my_facilities <- list('HF01.01',
+                      'HF01.02',
+                      'HF03',
+                      'HF05',
+                      'HF08.01',
+                      'HF08.02',
+                      'HF12.01',
+                      'HF13',
+                      'HF16.01',
+                      'HF16.02'
+                      )
 
 long_record_length <- 4
 max_len_new_record <- 8
@@ -77,7 +87,7 @@ knitr::opts_chunk$set(echo = TRUE)
   #AFTER THE CHANGE
 
 
-my_facilities <- list("HF02.01", "HF02.02", "HF04", "HF06", "HF10", "HF16.04" )
+my_facilities <- list("HF08.01")
 
 
 for (hf in names(kRedcapTokens)) {
@@ -99,11 +109,11 @@ for (hf in names(kRedcapTokens)) {
       hf.data.after$pk <- paste(hf.data.after$record_id, hf.data.after$study_number, sep = "_") 
       
       old_records <- read.csv(paste(hf, "records.csv"))
-      old_records$new_record_id <- str_pad(old_records$new_record_id,
-                             width=max_len_new_record,
-                             side="left",
-                             pad="0"
-                             )
+      #old_records$new_record_id <- str_pad(old_records$new_record_id,
+       #                      width=max_len_new_record,
+        #                     side="left",
+         #                    pad="0"
+          #                   )
       old_records$pk <- paste(old_records$new_record_id, old_records$study_number, sep = "_")
       
       #Look for error
